...
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataImageView" />

    <TextView
        android:id="@+id/usersNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_meals"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
...
